--- a/.env.sample
+++ b/.env.sample
@@ -2,7 +2,7 @@
 #  Ethereum Config
 #  (refer to our doc)
 #--------------------------------------------------------------------------
-DB_DATABASE=ethereum
+DB_DATABASE=ethereum-api
 DB_USERNAME=root
 DB_PASSWORD=password
 ETHEREUM_WS=
