Updated Log Path

--- a/.env.sample
+++ b/.env.sample
@@ -9,7 +9,7 @@ ETHEREUM_WS=
 ETHEREUM_MONGODB_URL=
 ETHEREUM_MONGODB_NAME='ethereum-api'
 ETHEREUM_STORAGE_PATH='./storage'
-ETHEREUM_LOGFILE='logs/ethereum.log'
+ETHEREUM_LOGFILE='ethereum.log'
 ETHEREUM_KEYPATH=
 ETHEREUM_CRTPATH=
 ETHEREUM_ENV=test
