--- a/.env.sample
+++ b/.env.sample
@@ -2,6 +2,7 @@
 #  Ethereum Config
 #  (refer to our doc)
 #--------------------------------------------------------------------------
+APP_ENV=development
 DB_DATABASE=ethereum-api
 DB_USERNAME=root
 DB_PASSWORD=password
@@ -12,6 +13,5 @@ ETHEREUM_STORAGE_PATH='./storage'
 ETHEREUM_LOGFILE='ethereum.log'
 ETHEREUM_KEYPATH=
 ETHEREUM_CRTPATH=
-ETHEREUM_ENV=test
 ETHEREUM_BIND=localhost
 ETHEREUM_PORT=8000
