--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,4 @@
 services:
-    mongo:
-        image: 'mongo:${MONGO_VERSION:-6}'
-        command: --auth --noscripting
-        restart: unless-stopped
-        environment:
-            MONGO_INITDB_DATABASE: '${DB_DATABASE:-ethereum}'
-            MONGO_INITDB_ROOT_USERNAME: '${DB_USERNAME:-ethereum}'
-            MONGO_INITDB_ROOT_PASSWORD: '${DB_PASSWORD:-secret}'
-        volumes:
-            - 'ethereum-mongo:/data/db'
-            - 'ethereum-mongo-config:/data/configdb'
-        networks:
-            - ethereum
-        ports:
-          - '27017:27017'
-        healthcheck:
-            test: [ "CMD-SHELL", "echo 'db.stats().ok' | mongosh localhost:27017/test --quiet"]
-            start_period: 40s
-
     ethereum-api:
         build:
             context: ./docker
@@ -48,7 +29,7 @@ services:
                 source: '${HOME}/.npm'
                 target: '/tmp/.npm'
         networks:
-            - ethereum
+            - wallets
         ports:
           - '8000:8000'
         healthcheck:
@@ -56,11 +37,5 @@ services:
             start_period: 2m
 
 networks:
-    ethereum:
+    wallets:
         driver: bridge
-
-volumes:
-    ethereum-mongo:
-        driver: local
-    ethereum-mongo-config:
-        driver: local
